--- a/.config/tealdeer/config.toml
+++ b/.config/tealdeer/config.toml
@@ -29,8 +29,8 @@ italic = false
 
 [display]
 compact = false
-use_pager = false
-show_title = false
+use_pager = true
+show_title = true
 
 [updates]
 auto_update = false
