Add reboot botton to waybar

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -6,7 +6,6 @@
   "spacing": 0,
   "modules-left": [
     // "custom/lock",
-    // "custom/reboot",
     // "custom/nvidia",
     "memory",
     "cpu",
@@ -20,6 +19,7 @@
     "pulseaudio",
     "backlight",
     "custom/temperature",
+    "custom/reboot",
     "custom/power",
   ],
   "custom/nvidia": {
