--- a/.config/yazi/yazi.toml
+++ b/.config/yazi/yazi.toml
@@ -24,7 +24,7 @@ max_height      = 900
 cache_dir       = ""
 image_delay     = 30
 image_filter    = "triangle"
-image_quality   = 75
+image_quality   = 90
 ueberzug_scale  = 1
 ueberzug_offset = [ 0, 0, 0, 0 ]
 
@@ -82,7 +82,8 @@ rules = [
 micro_workers    = 10
 macro_workers    = 10
 bizarre_retry    = 3
-image_alloc      = 536870912  # 512MB
+# image_alloc      = 536870912  # 512MB
+image_alloc      = 0  # Unlimited
 image_bound      = [ 5000, 5000 ]
 suppress_preload = false
 
