--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,8 +1,4 @@
-include themes/matugen.conf
-window_padding_width 5
-hide_window_decorations yes
-background_opacity 0.8
-font_family JetbrainsMono Nerd Font
-font_size 15
-remember_window_size no
-confirm_os_window_close 0
+include config/base.conf
+include config/map.conf
+include config/theme.conf
+include config/tab.conf
