--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -53,8 +53,8 @@
       "critical": 15
     },
     "format": "<span color='#28CD41'> {icon} </span>{capacity}% ",
-    "format-charging": " 󱐋{capacity}%",
-	  "interval": 1,
+    "format-charging": "󰂄{capacity}%",
+	"interval": 1,
     "format-icons": ["󰂎", "󰁼", "󰁿", "󰂁", "󰁹"],
     "tooltip": true
   },
