--- a/.config/kitty/config/base.conf
+++ b/.config/kitty/config/base.conf
@@ -1,9 +1,23 @@
+# General
 shell /usr/bin/fish
+confirm_os_window_close 0
 enabled_layouts splits
-window_padding_width 5
+
+# Window
 hide_window_decorations yes
 background_opacity 0.8
+window_padding_width 5
+remember_window_size no
+
+# Font
 font_family JetbrainsMono Nerd Font
 font_size 14.5
-remember_window_size no
-confirm_os_window_close 0
+
+# Cursor
+cursor_shape beam
+cursor_trail 20
+cursor_trail_start_threshold 60
+cursor_trail_decay 0.0 0.3
+cursor_blink_interval 0
+detect_urls no
+mouse_hide_wait 0.5
