--- a/.config/cava/waybar_cava#3.conf
+++ b/.config/cava/waybar_cava#3.conf
@@ -5,24 +5,24 @@
 [general]
 
 # Smoothing mode. Can be 'normal', 'scientific' or 'waves'. DEPRECATED as of 0.6.0
- mode = normal
+; mode = normal
 
 # Accepts only non-negative values.
- framerate = 60
+; framerate = 60
 
 # 'autosens' will attempt to decrease sensitivity if the bars peak. 1 = on, 0 = off
 # new as of 0.6.0 autosens of low values (dynamic range)
 # 'overshoot' allows bars to overshoot (in % of terminal height) without initiating autosens. DEPRECATED as of 0.6.0
- autosens = 1
- overshoot = 20
+; autosens = 1
+; overshoot = 20
 
 # Manual sensitivity in %. If autosens is enabled, this will only be the initial value.
 # 200 means double height. Accepts only non-negative values.
- sensitivity = 100
+; sensitivity = 100
 
 # The number of bars (0-512). 0 sets it to auto (fill up console).
 # Bars' width and space between bars in number of characters.
-; bars = 0
+bars = 50
 ; bar_width = 2
 ; bar_spacing = 1
 # bar_height is only used for output in "noritake" format
@@ -31,29 +31,23 @@
 # For SDL width and space between bars is in pixels, defaults are:
 ; bar_width = 20
 ; bar_spacing = 5
+; bar_height = 39
 
 # sdl_glsl have these default values, they are only used to calculate max number of bars.
 ; bar_width = 1
 ; bar_spacing = 0
-
-# ceter bars in terminal, if there is space.
-; center_align = 1
-
-# max height of bars in terminal, in percent of terminal height.
- max_height = 100
 
 
 # Lower and higher cutoff frequencies for lowest and highest bars
 # the bandwidth of the visualizer.
 # Note: there is a minimum total bandwidth of 43Mhz x number of bars.
 # Cava will automatically increase the higher cutoff if a too low band is specified.
- lower_cutoff_freq = 50
- higher_cutoff_freq = 10000
-
+; lower_cutoff_freq = 50
+; higher_cutoff_freq = 10000
 
 # Seconds with no input before cava goes to sleep mode. Cava will not perform FFT or drawing and
 # only check for input once per second. Cava will wake up once input is detected. 0 = disable.
-; sleep_timer = 0
+sleep_timer = 5
 
 
 [input]
@@ -70,7 +64,7 @@
 # (all pulseaudio sinks(outputs) have 'monitor' sources(inputs) associated with them).
 #
 # For pipewire 'source' will be the object name or object.serial of the device to capture from.
-# Both input and output devices are supported. To capture the monitor source of a sink node, append '.monitor' to the sink's object name.
+# Both input and output devices are supported.
 #
 # For alsa 'source' will be the capture device.
 # For fifo 'source' will be the path to fifo-file.
@@ -85,11 +79,11 @@
 # For jack 'source' will be the name of the JACK server to connect to, e.g. 'foobar'. Default: 'default'.
 # README.md contains further information on how to setup CAVA for JACK.
 #
- method = pulse
- source = auto
+; method = pulse
+; source = auto
 
- method = pipewire
- source = auto
+; method = pipewire
+; source = auto
 
 ; method = alsa
 ; source = hw:Loopback,1
@@ -118,26 +112,16 @@
 #   channels:    sndio, oss, jack
 #   autoconnect: jack
 # Other methods ignore these settings.
-# For pipewire, sample_rate will default to 48000, for all other input methods, sample_rate will default to 44100.
 #
 # For 'sndio' and 'oss' they are only preferred values, i.e. if the values are not supported
 # by the chosen audio device, the device will use other supported values instead.
 # Example: 48000, 32 and 2, but the device only supports 44100, 16 and 1, then it
 # will use 44100, 16 and 1.
 #
-#
-# The 'pipewire' input method has three options to control linking and mixing:
-#   active: Force the node to always process. Useful for monitoring sources when no other application is active.
-#   remix: Allow pipewire to remix audio channels to match cava's channel count. Useful for surround sound.
-#   virtual: Set the node to virtual, to avoid recording notifications from the DE.
-#
 ; sample_rate = 44100
 ; sample_bits = 16
 ; channels = 2
 ; autoconnect = 2
-; active = 0
-; remix = 1
-; virtual = 1
 
 
 [output]
@@ -150,7 +134,7 @@
 #
 # 'raw' is an 8 or 16 bit (configurable via the 'bit_format' option) data
 # stream of the bar heights that can be used to send to other applications.
-# 'raw' defaults to 1024 bars stereo (512 bars mono), which can be adjusted in the 'bars' option above.
+# 'raw' defaults to 200 bars, which can be adjusted in the 'bars' option above.
 #
 # 'noritake' outputs a bitmap in the format expected by a Noritake VFD display
 #  in graphic mode. It only support the 3000 series graphical VFDs for now.
@@ -158,7 +142,7 @@
 # 'sdl' uses the Simple DirectMedia Layer to render in a graphical context.
 # 'sdl_glsl' uses SDL to create an OpenGL context. Write your own shaders or
 # use one of the predefined ones.
- method = noncurses
+method = sdl_glsl
 
 # Orientation of the visualization. Can be 'bottom', 'top', 'left', 'right' or
 # 'horizontal'. Default is 'bottom'. 'left and 'right' are only supported on sdl
@@ -177,9 +161,7 @@
 ; mono_option = average
 ; reverse = 0
 
-# Raw output target.
-# On Linux, a fifo will be created if target does not exist.
-# On Windows, a named pipe will be created if target does not exist.
+# Raw output target. A fifo will be created if target does not exist.
 ; raw_target = /dev/stdout
 
 # Raw data format. Can be 'binary' or 'ascii'.
@@ -193,12 +175,13 @@
 
 # Ascii delimiters. In ascii format each bar and frame is separated by a delimiters.
 # Use decimal value in ascii table (i.e. 59 = ';' and 10 = '\n' (line feed)).
+bar_delimiter = 0
 ; bar_delimiter = 59
 ; frame_delimiter = 10
 
 # sdl window size and position. -1,-1 is centered.
-; sdl_width = 1024
-; sdl_height = 512
+sdl_width = 150
+sdl_height = 39
 ; sdl_x = -1
 ; sdl_y= -1
 ; sdl_full_screen = 0
@@ -214,11 +197,11 @@
 ; synchronized_sync = 0
 
 # Shaders for sdl_glsl, located in $HOME/.config/cava/shaders
-; vertex_shader = pass_through.vert
-; fragment_shader = bar_spectrum.frag
+vertex_shader = pass_through.vert
+fragment_shader = bar_spectrum.frag
 
 ; for glsl output mode, keep rendering even if no audio
-; continuous_rendering = 0
+continuous_rendering = 1;
 
 # disable console blank (screen saver) in tty
 # (Not supported on FreeBSD)
@@ -232,6 +215,16 @@
 
 [color]
 
+;background = '#282C34'
+;gradient = 1
+;gradient_count = 6
+;gradient_color_1 = '#319C08'
+;gradient_color_2 = '#29CE10'
+;gradient_color_3 = '#BDDE29'
+;gradient_color_4 = '#DEA518'
+;gradient_color_5 = '#D66600'
+;gradient_color_6 = '#CE2910'
+
 # Colors can be one of seven predefined: black, blue, cyan, green, magenta, red, white, yellow.
 # Or defined by hex code '#xxxxxx' (hex code must be within ''). User defined colors requires
 # a terminal that can change color definitions such as Gnome-terminal or rxvt.
@@ -240,47 +233,33 @@
 ; foreground = default
 
 # SDL and sdl_glsl only support hex code colors, these are the default:
+#background = '#F4EAED'
+background = '#282C34'
 ; background = '#111111'
 ; foreground = '#33ffff'
-
+;background = '#F4EAED'
+;foreground = '#59cc33'
+;background = '#59cc33'
+;foreground = '#F4EAED'
+;background = '#282C34'
+; foreground = '#F4EAED'
 
 # Gradient mode, only hex defined colors are supported,
 # background must also be defined in hex or remain commented out. 1 = on, 0 = off.
 # You can define as many as 8 different colors. They range from bottom to top of screen
-; gradient = 0
+gradient = 1
+gradient_count = 2
+gradient_color_1 = '#282C34'
+gradient_color_2 = '#45475A'
+
 ; gradient_color_1 = '#59cc33'
 ; gradient_color_2 = '#80cc33'
-; gradient_color_3 = '#a6cc33'
-; gradient_color_4 = '#cccc33'
-; gradient_color_5 = '#cca633'
-; gradient_color_6 = '#cc8033'
-; gradient_color_7 = '#cc5933'
-; gradient_color_8 = '#cc3333'
-
-
-# Horizontal is only supported on noncurses output.
-# Only one color will be calculated per bar.
-; horizontal_gradient = 0
-; horizontal_gradient_color_1 = '#c45161'
-; horizontal_gradient_color_2 = '#e094a0'
-; horizontal_gradient_color_3 = '#f2b6c0'
-; horizontal_gradient_color_4 = '#f2dde1'
-; horizontal_gradient_color_5 = '#cbc7d8'
-; horizontal_gradient_color_6 = '#8db7d2'
-; horizontal_gradient_color_7 = '#5e62a9'
-; horizontal_gradient_color_8 = '#434279'
-
-
-# If both vertical and horizontal gradient is enabled, vertical will be blended in this direction.
-# Can be 'up', 'down', 'left' or 'right'. 'up' means the vertical gradient will be blended in from
-# bottom to top. I.e. the bottom will be only the horizontal
-# and top will be only the color of the vertical gradient.
-; blend_direction = 'up'
-
-# use theme file instead of defining colors in this file
-# themes are located in $HOME/.config/cava/themes
- theme = 'your-theme'
-
+ gradient_color_3 = '#a6cc33'
+ gradient_color_4 = '#cccc33'
+ gradient_color_5 = '#cca633'
+ gradient_color_6 = '#cc8033'
+ gradient_color_7 = '#cc5933'
+ gradient_color_8 = '#cc3333'
 
 [smoothing]
 
@@ -307,7 +286,6 @@
 # the raw visualization is very noisy, this factor adjusts the integral and gravity filters to keep the signal smooth
 # 100 will be very slow and smooth, 0 will be fast but noisy.
 ; noise_reduction = 77
-
 
 [eq]
 
